made changes in tests