@@ -37,14 +37,14 @@ import org.mockito.junit.jupiter.MockitoExtension;
  */
 @ExtendWith({VertxExtension.class, MockitoExtension.class})
 @DisplayName("AdminService Tests")
-class AdminServiceTest {
+public class AdminServiceTest {
 
   @Mock private AdminDAO adminDAO;
   private AdminService adminService;
-  private final String testProjectKey = "123e4567-e89b-12d3-a456-426614174000";
-  private final String testExperimentName = "test-experiment";
-  private final String testExperimentKey = CommonUtil.getExperimentKey(testExperimentName);
-  private final String testExperimentId = "123e4567-e89b-12d3-a456-426614174001";
+  private static final String PROJECT_KEY = "123e4567-e89b-12d3-a456-426614174000";
+  private static final String EXPERIMENT_NAME = "test-experiment";
+  private static final String EXPERIMENT_KEY = CommonUtil.getExperimentKey(EXPERIMENT_NAME);
+  private static final String EXPERIMENT_ID = "123e4567-e89b-12d3-a456-426614174001";
 
   @BeforeEach
   void setUp() {
@@ -59,10 +59,10 @@ class AdminServiceTest {
     void testGetTags_Success() {
       // Arrange
       List<String> mockTags = Arrays.asList("A/B-test", "feature-flag", "performance", "ui-test");
-      when(adminDAO.fetchTags(testProjectKey)).thenReturn(Single.just(mockTags));
+      when(adminDAO.fetchTags(PROJECT_KEY)).thenReturn(Single.just(mockTags));
 
       // Act
-      TestObserver<TagsResponse> testObserver = adminService.getTags(testProjectKey).test();
+      TestObserver<TagsResponse> testObserver = adminService.getTags(PROJECT_KEY).test();
 
       // Assert
       testObserver.assertComplete();
@@ -76,17 +76,17 @@ class AdminServiceTest {
       assertTrue(response.tags().contains("feature-flag"));
       assertTrue(response.tags().contains("performance"));
       assertTrue(response.tags().contains("ui-test"));
-      verify(adminDAO, times(1)).fetchTags(testProjectKey);
+      verify(adminDAO, times(1)).fetchTags(PROJECT_KEY);
     }
 
     @Test
     @DisplayName("Should return empty tags list if project has no tags")
     void testGetTags_EmptyResult() {
       // Arrange
-      when(adminDAO.fetchTags(testProjectKey)).thenReturn(Single.just(List.of()));
+      when(adminDAO.fetchTags(PROJECT_KEY)).thenReturn(Single.just(List.of()));
 
       // Act
-      TestObserver<TagsResponse> testObserver = adminService.getTags(testProjectKey).test();
+      TestObserver<TagsResponse> testObserver = adminService.getTags(PROJECT_KEY).test();
 
       // Assert
       testObserver.assertComplete();
@@ -96,7 +96,7 @@ class AdminServiceTest {
       assertNotNull(response);
       assertNotNull(response.tags());
       assertTrue(response.tags().isEmpty());
-      verify(adminDAO, times(1)).fetchTags(testProjectKey);
+      verify(adminDAO, times(1)).fetchTags(PROJECT_KEY);
     }
 
     @Test
@@ -104,15 +104,15 @@ class AdminServiceTest {
     void testGetTags_DAOError() {
       // Arrange
       RuntimeException dbException = new RuntimeException("Database error");
-      when(adminDAO.fetchTags(testProjectKey)).thenReturn(Single.error(dbException));
+      when(adminDAO.fetchTags(PROJECT_KEY)).thenReturn(Single.error(dbException));
 
       // Act
-      Single<TagsResponse> result = adminService.getTags(testProjectKey);
+      Single<TagsResponse> result = adminService.getTags(PROJECT_KEY);
       TestObserver<TagsResponse> testObserver = result.test();
 
       // Assert
       testObserver.assertError(RestException.class);
-      verify(adminDAO, times(1)).fetchTags(testProjectKey);
+      verify(adminDAO, times(1)).fetchTags(PROJECT_KEY);
     }
   }
 
@@ -123,12 +123,12 @@ class AdminServiceTest {
     @DisplayName("Should return available=true when experiment name does not exist")
     void testIsExperimentNameAvailable_Available() {
       // Arrange
-      when(adminDAO.isExperimentKeyAvailable(testProjectKey, testExperimentKey))
+      when(adminDAO.isExperimentKeyAvailable(PROJECT_KEY, EXPERIMENT_KEY))
           .thenReturn(Single.just(true));
 
       // Act
       TestObserver<NameAvailabilityResponse> testObserver =
-          adminService.isExperimentNameAvailable(testProjectKey, testExperimentName).test();
+          adminService.isExperimentNameAvailable(PROJECT_KEY, EXPERIMENT_NAME).test();
 
       // Assert
       testObserver.assertComplete();
@@ -137,19 +137,19 @@ class AdminServiceTest {
       NameAvailabilityResponse response = testObserver.values().get(0);
       assertNotNull(response);
       assertTrue(response.isAvailable());
-      verify(adminDAO, times(1)).isExperimentKeyAvailable(testProjectKey, testExperimentKey);
+      verify(adminDAO, times(1)).isExperimentKeyAvailable(PROJECT_KEY, EXPERIMENT_KEY);
     }
 
     @Test
     @DisplayName("Should return available=false when experiment name already exists")
     void testIsExperimentNameAvailable_NotAvailable() {
       // Arrange
-      when(adminDAO.isExperimentKeyAvailable(testProjectKey, testExperimentKey))
+      when(adminDAO.isExperimentKeyAvailable(PROJECT_KEY, EXPERIMENT_KEY))
           .thenReturn(Single.just(false));
 
       // Act
       TestObserver<NameAvailabilityResponse> testObserver =
-          adminService.isExperimentNameAvailable(testProjectKey, testExperimentName).test();
+          adminService.isExperimentNameAvailable(PROJECT_KEY, EXPERIMENT_NAME).test();
 
       // Assert
       testObserver.assertComplete();
@@ -158,7 +158,7 @@ class AdminServiceTest {
       NameAvailabilityResponse response = testObserver.values().get(0);
       assertNotNull(response);
       assertFalse(response.isAvailable());
-      verify(adminDAO, times(1)).isExperimentKeyAvailable(testProjectKey, testExperimentKey);
+      verify(adminDAO, times(1)).isExperimentKeyAvailable(PROJECT_KEY, EXPERIMENT_KEY);
     }
 
     @Test
@@ -166,17 +166,17 @@ class AdminServiceTest {
     void testIsExperimentNameAvailable_DAOError() {
       // Arrange
       RuntimeException dbException = new RuntimeException("Database error");
-      when(adminDAO.isExperimentKeyAvailable(testProjectKey, testExperimentKey))
+      when(adminDAO.isExperimentKeyAvailable(PROJECT_KEY, EXPERIMENT_KEY))
           .thenReturn(Single.error(dbException));
 
       // Act
       Single<NameAvailabilityResponse> result =
-          adminService.isExperimentNameAvailable(testProjectKey, testExperimentName);
+          adminService.isExperimentNameAvailable(PROJECT_KEY, EXPERIMENT_NAME);
       TestObserver<NameAvailabilityResponse> testObserver = result.test();
 
       // Assert
       testObserver.assertError(RestException.class);
-      verify(adminDAO, times(1)).isExperimentKeyAvailable(testProjectKey, testExperimentKey);
+      verify(adminDAO, times(1)).isExperimentKeyAvailable(PROJECT_KEY, EXPERIMENT_KEY);
     }
   }
 
@@ -209,15 +209,15 @@ class AdminServiceTest {
       List<ExperimentHistoryEntry> mockHistory = Arrays.asList(entry1, entry2);
       ExperimentHistoryResponse mockResult =
           ExperimentHistoryResponse.builder()
-              .experimentId(testExperimentId)
+              .experimentId(EXPERIMENT_ID)
               .history(mockHistory)
               .pagination(
                   PaginationMeta.builder().currentPage(page).pageSize(limit).totalCount(2).build())
               .build();
       ExperimentHistoryRequest request =
           ExperimentHistoryRequest.builder()
-              .projectKey(testProjectKey)
-              .experimentId(testExperimentId)
+              .projectKey(PROJECT_KEY)
+              .experimentId(EXPERIMENT_ID)
               .limit(limit)
               .page(page)
               .build();
@@ -233,7 +233,7 @@ class AdminServiceTest {
       testObserver.assertValueCount(1);
       ExperimentHistoryResponse response = testObserver.values().get(0);
       assertNotNull(response);
-      assertEquals(testExperimentId, response.experimentId());
+      assertEquals(EXPERIMENT_ID, response.experimentId());
       assertNotNull(response.history());
       assertEquals(2, response.history().size());
       assertNotNull(response.pagination());
@@ -253,7 +253,7 @@ class AdminServiceTest {
       int page = 2;
       int totalCount = 25;
       List<ExperimentHistoryEntry> mockHistory =
-          Arrays.asList(
+          List.of(
               ExperimentHistoryEntry.builder()
                   .updatedBy("user11")
                   .previousData(new JsonObject().put("status", "DRAFT"))
@@ -263,7 +263,7 @@ class AdminServiceTest {
                   .build());
       ExperimentHistoryResponse mockResult =
           ExperimentHistoryResponse.builder()
-              .experimentId(testExperimentId)
+              .experimentId(EXPERIMENT_ID)
               .history(mockHistory)
               .pagination(
                   PaginationMeta.builder()
@@ -274,8 +274,8 @@ class AdminServiceTest {
               .build();
       ExperimentHistoryRequest request =
           ExperimentHistoryRequest.builder()
-              .projectKey(testProjectKey)
-              .experimentId(testExperimentId)
+              .projectKey(PROJECT_KEY)
+              .experimentId(EXPERIMENT_ID)
               .limit(limit)
               .page(page)
               .build();
@@ -304,15 +304,15 @@ class AdminServiceTest {
       int page = 1;
       ExperimentHistoryResponse mockResult =
           ExperimentHistoryResponse.builder()
-              .experimentId(testExperimentId)
+              .experimentId(EXPERIMENT_ID)
               .history(List.of())
               .pagination(
                   PaginationMeta.builder().currentPage(page).pageSize(limit).totalCount(0).build())
               .build();
       ExperimentHistoryRequest request =
           ExperimentHistoryRequest.builder()
-              .projectKey(testProjectKey)
-              .experimentId(testExperimentId)
+              .projectKey(PROJECT_KEY)
+              .experimentId(EXPERIMENT_ID)
               .limit(limit)
               .page(page)
               .build();
@@ -328,7 +328,7 @@ class AdminServiceTest {
       testObserver.assertValueCount(1);
       ExperimentHistoryResponse response = testObserver.values().get(0);
       assertNotNull(response);
-      assertEquals(testExperimentId, response.experimentId());
+      assertEquals(EXPERIMENT_ID, response.experimentId());
       assertNotNull(response.history());
       assertTrue(response.history().isEmpty());
       assertNotNull(response.pagination());
@@ -347,8 +347,8 @@ class AdminServiceTest {
       RuntimeException dbException = new RuntimeException("Database error");
       ExperimentHistoryRequest request =
           ExperimentHistoryRequest.builder()
-              .projectKey(testProjectKey)
-              .experimentId(testExperimentId)
+              .projectKey(PROJECT_KEY)
+              .experimentId(EXPERIMENT_ID)
               .limit(limit)
               .page(page)
               .build();
